internal/dataplane/testdata/golden/fallback-config-gateway-api/in.yaml
# In this test case we have a set of all supported Gateway API resources attached to all of their possible dependants.
# We expect empty config because of the broken resources.
# `test.konghq.com/broken` annotations can be removed from the plugins to generate the actual config.
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    test.konghq.com/broken: "true"
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /httproute
      backendRefs:
        - name: service
          kind: Service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcproute
  namespace: default
  annotations:
    test.konghq.com/broken: "true"
spec:
  parentRefs:
    - name: kong
  rules:
    - backendRefs:
        - name: service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: UDPRoute
metadata:
  name: udproute
  namespace: default
  annotations:
    test.konghq.com/broken: "true"
spec:
  parentRefs:
    - name: kong
  rules:
    - backendRefs:
        - name: service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute
  namespace: default
  annotations:
    test.konghq.com/broken: "true"
spec:
  parentRefs:
    - name: kong
  hostnames:
    - tlsroute.kong.example
  rules:
    - backendRefs:
        - name: service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute
  namespace: default
  annotations:
    test.konghq.com/broken: "true"
spec:
  parentRefs:
    - name: kong
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: service
          port: 80
      matches:
        - method:
            service: "grpcbin.GRPCBin"
            method: "DummyUnary"
---
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
  annotations:
    konghq.com/plugins: plugin
spec:
  ports:
    - port: 80
